<resources>
    <string name="app_name">FoodRunner</string>
    <string name="home">Home</string>
    <string name="enter_your_mobile_number">Mobile Number(10 digits)</string>
    <string name="enter_your_password">Password</string>
    <string name="enterpassword">Password (Min 4 characters)</string>
    <string name="loginbuttontext">Login</string>
    <string name="new_user_sign_up_now">New user ? Sign up now</string>
    <string name="forgot_password_click_here">Forgot Password ? Click here </string>
    <string name="enter_your_name">Name (Min 3 characters)</string>
    <string name="enter_your_email">Email</string>
    <string name="enter_your_phone_number">Phone number(10 digits)</string>
    <string name="confirm_your_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="preferences_file_name">FoodRunner</string>
    <string name="address">Address</string>
    <string name="open">OpenDrawers</string>
    <string name="close">CloseDrawers</string>
    <string name="profile">Profile</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="price">price</string>
    <string name="rating">rating</string>
    <string name="foodrunner">FoodRunner</string>
    <string name="indiacode">+91-</string>
    <string name="email_address">Email Address</string>
    <string name="next">Next</string>
    <string name="enter_the_otp">OTP (4 characters)</string>
    <string name="new_password">New password (Min 4 characters)</string>
    <string name="confirm_password">Confirm password</string>
    <string name="submit">Submit</string>
    <string name="indian_code">+91-</string>
    <string name="my_profile">My Profile</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below:</string>
    <string name="add">Add</string>
    <string name="no">no</string>
    <string name="itemname">itemname</string>
    <string name="q1">Q.1 How will the training be delivered?</string>
    <string name="a1">A.1 You will be taught using pre-recorded videos and text tutorials.The training has quizzes, assignments and tests to help you learn better.At the end of the training, you will attempt a project to get hands-on practice of what you learn during your training.</string>
    <string name="q2">Q.2 What will be the timings of the training?</string>
    <string name="a2">A.2 As this is a purely online training program, you can choose to learn at any time of the day.We will recommend a pace to be followed throughout the program, but the actual timings and learning hours can be decided by students according to their convenience.</string>
    <string name="q3">Q.3 What is the duration of training?</string>
    <string name="a3">A.3 The training duration is of 6 weeks.</string>
    <string name="q4">Q.4 How much time should I spend everyday?</string>
    <string name="a4">A.4 We recommend spending 10–12 hours per week. However, the actual learning hours can be decided by you as per your convenience.</string>
    <string name="q5">Q.5 When can I start my training?</string>
    <string name="a5">A.5 You can choose your preferred batch date while signing up for the raining program.</string>
    <string name="a6">A.6 You will be able to download the certificate once you complete your training and take he final test.</string>
    <string name="q6">Q.6 When will I get the certificate?</string>
    <string name="no_favorites_yet">No Favorites Yet</string>
    <string name="remove">Remove</string>
    <string name="place_order">Place Order</string>
    <string name="ordering_from">Ordering from:</string>
    <string name="proceed_to_cart">Proceed to cart</string>
    <string name="itemprice">itemprice</string>
    <string name="your_order_has_been_successfully_placed">Your order has been successfully placed!</string>
    <string name="ok">OK</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below:</string>
    <string name="restaurantname">restaurantname</string>
    <string name="date">date</string>
    <string name="sort">Sort the items</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort By?</string>
    <string name="cost_low_to_high">Cost(Low to High)</string>
    <string name="cost_high_to_low">Cost(High to Low)</string>
    <string name="ratings">Rating</string>
</resources>
