<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/home"/>
        <item
            android:id="@+id/profile"
            android:title="@string/profile"
            android:icon="@drawable/profile"
            />
        <item
            android:id="@+id/favorites"
            android:title="@string/favourite_restaurants"
            android:icon="@drawable/favorites"
            />
        <item
            android:id="@+id/history"
            android:title="@string/order_history"
            android:icon="@drawable/history"
            />
        <item
            android:id="@+id/faqs"
            android:title="@string/faqs"

            android:icon="@drawable/question_answer"
            />

    </group>

</menu>