<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    tools:context=".fragment.FAQSFragment">


    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:padding="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:text="@string/q1"
            android:textSize="18sp"
            android:id="@+id/q1"
            android:textStyle="bold"
            android:textColor="@color/fullbluecolor"
            android:fontFamily="serif"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/a1"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="@color/blackcolor"
            android:fontFamily="serif"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/q2"
            android:textSize="18sp"
            android:id="@+id/q2"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textColor="@color/fullbluecolor"
            android:fontFamily="serif"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/a2"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="@color/blackcolor"
            android:fontFamily="serif"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/q3"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/q3"
            android:layout_marginTop="15dp"
            android:textColor="@color/fullbluecolor"
            android:fontFamily="serif"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/a3"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="@color/blackcolor"
            android:fontFamily="serif"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/q4"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/q4"
            android:layout_marginTop="15dp"
            android:textColor="@color/fullbluecolor"
            android:fontFamily="serif"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/a4"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="@color/blackcolor"
            android:fontFamily="serif"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/q5"
            android:textSize="18sp"
            android:id="@+id/q5"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textColor="@color/fullbluecolor"
            android:fontFamily="serif"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/a5"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="@color/blackcolor"
            android:fontFamily="serif"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/q6"
            android:textSize="18sp"
            android:id="@+id/q6"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textColor="@color/fullbluecolor"
            android:fontFamily="serif"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/a6"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="@color/blackcolor"
            android:fontFamily="serif"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="60dp"
            android:background="@color/colorPrimary"/>
    </LinearLayout>
</ScrollView>
