<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:id="@+id/sortBy"
        android:fontFamily="serif"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textStyle="bold"
        android:textColor="@color/fullbluecolor"
        android:text="@string/sort_by"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radio"
        android:orientation="vertical">
    <RadioButton
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/cost_low_to_high"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:id="@+id/costlowtohigh"
        android:textColor="@color/fullbluecolor"
        android:textSize="20sp"
        />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:text="@string/cost_high_to_low"
            android:fontFamily="serif"
            android:id="@+id/costhightolow"
            android:textColor="@color/fullbluecolor"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:text="@string/ratings"
            android:fontFamily="serif"
            android:id="@+id/rating"
            android:textStyle="bold"
            android:textColor="@color/fullbluecolor"
            android:textSize="20sp"
            />
    </RadioGroup>
</LinearLayout>