<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="6"
    >

        <TextView
            android:layout_weight="1.0"
            android:layout_width="0dp"
            android:text="@string/no"
            android:textColor="@color/colorPrimary"
            android:id="@+id/txtitemnumber"
            android:padding="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:fontFamily="serif"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3.2"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="match_parent"
                android:text="@string/itemname"
                android:id="@+id/txtitemname"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/fullbluecolor"
                android:fontFamily="serif"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:text="@string/itemprice"
                android:textColor="@color/greencolor"
                android:layout_marginTop="10dp"
                android:id="@+id/txtitemprice"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="serif"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    <Button
        android:layout_width="0dp"
        android:layout_weight="1.8"
        android:background="@drawable/headerbackground"
        android:layout_gravity="center"
        android:layout_height="50dp"
        android:id="@+id/btnitemadd"
        android:fontFamily="serif"
        android:textColor="@color/whitecolor"
        android:textSize="16sp"
        android:layout_margin="15dp"
        android:textStyle="bold"
        android:text="@string/add"
        android:textAllCaps="false"
       />
    <Button
        android:layout_width="0dp"
        android:layout_weight="1.8"
        android:background="@drawable/removebuttonbackground"
        android:layout_gravity="center"
        android:layout_height="50dp"
        android:visibility="gone"
        android:id="@+id/btnitemremove"
        android:fontFamily="serif"
        android:textColor="@color/whitecolor"
        android:textSize="16sp"
        android:layout_margin="15dp"
        android:textStyle="bold"
        android:text="@string/remove"
        android:textAllCaps="false"
        />

</LinearLayout>