<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/whitecolor"
    tools:context=".activity.Login"
    >



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#182367"
        app:cardCornerRadius="5dp"
        android:id="@+id/card"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/layoutbackground"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/headericon"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_marginTop="40dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/foodrunnericon"
                    app:civ_border_color="#182367"/>





                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edmobilenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="50dp"
                    app:hintEnabled="true"
                    app:errorEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:hintTextColor="#182367"

                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:drawableEnd="@drawable/phone"
                        android:hint="@string/enter_your_mobile_number"
                        android:id="@+id/mobilenumber"
                        android:fontFamily="serif"
                        android:inputType="phone"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:hintEnabled="true"
                    app:errorEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:hintTextColor="#182367"
                    app:passwordToggleEnabled="true"

                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:fontFamily="serif"
                        android:drawableEnd="@drawable/lock"
                        android:hint="@string/enter_your_password"
                        android:id="@+id/password"
                        android:inputType="numberPassword"
                        />

                </com.google.android.material.textfield.TextInputLayout>





                <Button
                    android:layout_width="match_parent"
                    android:background="@drawable/headerbackground"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="50dp"
                    android:id="@+id/btnlogin"
                    android:fontFamily="serif"
                    android:textColor="#ffffff"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:layout_marginStart="20dp"
                    android:text="@string/loginbuttontext"
                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textSize="18sp"
                    android:clickable="true"
                    android:textStyle="bold"
                    android:fontFamily="serif"
                    android:id="@+id/txtforgotpassword"
                    android:gravity="center_horizontal"
                    android:text="@string/forgot_password_click_here"
                    android:textColor="#182367"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:fontFamily="serif"
                    android:id="@+id/txtsignup"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/new_user_sign_up_now"
                    android:textColor="#182367"
                    android:layout_marginBottom="40dp"
                    />

            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</LinearLayout>